--- a/nctrackclub/src/App.css
+++ b/nctrackclub/src/App.css
@@ -20,3 +20,12 @@
 .App-link {
   color: #09d3ac;
 }
+
+.navBar {
+  background-color: #1A4978;
+  font-size: 20px;
+}
+
+.footer {
+  background-color: #1A4978;
+}
